tests/baselines/reference/unusedLocalsInMethod3.errors.txt
tests/cases/compiler/unusedLocalsInMethod3.ts(4,13): error TS6132: Variable 'x' has never been used.


==== tests/cases/compiler/unusedLocalsInMethod3.ts (1 errors) ====
    
    class greeter {
        public function1() {
            var x, y;
                ~
!!! error TS6132: Variable 'x' has never been used.
            y = 1;
        }
    }